title for change in derivative genome

--- a/CN_sig_extraction_text/copy_number_signatures_extraction.tex
+++ b/CN_sig_extraction_text/copy_number_signatures_extraction.tex
@@ -249,9 +249,19 @@ s6 & none\\
 
 \begin{figure}[h]
 \centering
-\includegraphics[width=3in]{/Users/morril01/Desktop/plots_segmented_common_deletion/plotCN_362c82d8-6739-4fa0-81d1-f8399f947270_ACE08cellularity.pdf}
+\includegraphics[width=\textwidth]{/Users/morril01/Desktop/plots_segmented_common_deletion/plotCN_362c82d8-6739-4fa0-81d1-f8399f947270_ACE08cellularity.pdf}
 \caption{Notice the first part of chrom 1 in which there is a deletion of both alleles}
 \end{figure}
+
+Parameters:
+\begin{enumerate}
+\item Number of reads
+\item Length of reads
+\item Length of chromosomes
+\item Length of bins for QDNAseq
+\item Purity
+\item CN aberrations which are simulated (how many copies, etc.)
+\end{enumerate}
 
 %/Users/morril01/Documents/PhD/CDA_in_Cancer/code/Nature_cnsigs/RSVSim/output/output_genome2/plots_segmented/plotCN_362c82d8-6739-4fa0-81d1-f8399f947270_ACE08cellularity.pdf
 
