--- a/RSVSim/README
+++ b/RSVSim/README
@@ -1,1 +1,10 @@
 I use the snakemake environment source activate snakemake-globalDA
+
+
+rsync -r exposures/ lm687@login-cpu.hpc.cam.ac.uk:/home/lm687/CNsim/RSVSim/exposures
+
+rsync -r output/genome2/ lm687@login-cpu.hpc.cam.ac.uk:/home/lm687/CNsim/RSVSim/output/genome2/
+
+rsync -r CNSimGenome2/ lm687@login-cpu.hpc.cam.ac.uk:/home/lm687/CNsim/RSVSim/CNSimGenome2/
+
+ snakemake --cluster "sbatch -A MARKOWETZ-SL3-CPU -t 0:10:00 -p skylake --cores 1" --jobs 40 --printshellcmds
