--- a/RSVSim/README
+++ b/RSVSim/README
@@ -4,6 +4,10 @@ I use the snakemake environment source activate snakemake-globalDA
 rsync -r exposures/ lm687@login-cpu.hpc.cam.ac.uk:/home/lm687/CNsim/RSVSim/exposures
 
 rsync -r output/genome2/ lm687@login-cpu.hpc.cam.ac.uk:/home/lm687/CNsim/RSVSim/output/genome2/
+rsync -r output/output_genome2/ lm687@login-cpu.hpc.cam.ac.uk:/home/lm687/CNsim/RSVSim/output/output_genome2/
+
+## from HPC to local
+rsync -a lm687@login-cpu.hpc.cam.ac.uk:/home/lm687/CNsim/RSVSim/output/output_genome2/plots_segmented/ output/output_genome2/plots_segmented/ 
 
 rsync -r CNSimGenome2/ lm687@login-cpu.hpc.cam.ac.uk:/home/lm687/CNsim/RSVSim/CNSimGenome2/
 
